[tool.poetry]
name = "headj"
version = "0.1.2"
description = "A utility that converts input JSON arrays into valid JSON that contains only a subset of the elements"
authors = ["Evan Williams <ejw@fig.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/evanjpw/headj"
keywords = ["utilities", "json"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"
json-stream = "^1.4.2"
pprintpp = "^0.4.0"
rich = "^12.5.1"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"
twine = "^4.0.1"

[tool.poetry.scripts]
headj = "headj.main:main"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1",
]
